# game-recommender

./: .gitignore  README.md
client/: package-lock.json  package.json  tailwind.config.cjs
client/src/: App.tsx
client/src/lib/: Counter.svelte
server/: Cargo.toml
server/src/: igdb.rs  main.rs  twitch.rs  util.rs
server/src/game_rec/: cb_filtering.rs  igdb.rs  mod.rs
server/src/igdb/: enums.rs  mod.rs
