[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.3", features = ["json"] }
futures = "0.3"
tokio = { version = "1.12.0", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0" 
dotenv = "0.15.0"
nalgebra = "0.32.2"
nalgebra-sparse = "0.9.0"
bimap = "0.6.3"
strum = "0.24.1"
strum_macros = "0.24"
rocket = { version = "=0.5.0-rc.3", features = ["json"] }